# chat_friend

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  justfile  main.py  pyproject.toml
chroma_data/: chroma.sqlite3
config/: appsetting.yaml  instructions.yaml
src/a_domain/model/: conversation.py  message.py
src/a_domain/ports/bussiness/: model_catalog_port.py
src/a_domain/ports/notification/: logging_port.py
src/a_domain/types/: enums.py
src/b_application/: pipeline.py
src/b_application/configuration/: schemas.py
src/b_application/use_cases/: conversation_usecase.py
src/c_infrastructure/ai_models/: factory.py  grok_adapter.py  model_catalog.py  openai_adapter.py
src/c_infrastructure/ai_models/ai_adapter/: gemini_adapter.py  grok_adapter.py  groq_adapter.py  openai_adapter.py
src/c_infrastructure/config/: loader.py  utils.py
src/c_infrastructure/services/: chat_styler_service.py  logger_service.py
src/d_presentation/: container.py  dependencies.py
src/d_presentation/web/: api_router.py  app.py  app_factory.py
src/d_presentation/web/endpoints/: line_webhook.py
